--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -3,8 +3,8 @@
 		<span class="user_name">
 			<%= current_user.name %>
 		</span>
-		<span class="microposts">
-			<% pluralize(current_user.microposts.count, "micropost") %>
+		<span class="modules">
+			<% pluralize(current_user.paths.count, "module") %>
 		</span>
 	</a>
 </div>
