--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,18 +4,21 @@
   <title><%= title %></title>
   <%= csrf_meta_tag %>
   <%= javascript_include_tag :defaults %>
-  <%= render 'layouts/stylesheets' %>
+  <%= render "layouts/stylesheets" %>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+  <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div class="container">
-	<%= render 'layouts/header' %>
+	<%= render "layouts/header" %>
 	<section class="round">
 		<% flash.each do |key, value| %>
 			<%= content_tag(:div, value, :class => "flash #{key}") %>
 		<% end %>
 		<%= yield %>
 	</section>
-	<%= render 'layouts/footer' %>
+	<%= render "layouts/footer" %>
 	<%= debug(params) if Rails.env.development? %>
 </div>
 </body>
