Fixing typo on News page.

--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -3,8 +3,7 @@
 </header>
 <article>
 	<h2>It's Alive!</h2>
-	<p>We've just pushed the latest build of Project Moonlite live to production on heroku as of last night. You can find the site, for the time being, at:</p>
-	<p>http://projectmoonlite.heroku.com</p>
+	<p>We've just pushed the latest build of Project Moonlite live to production on heroku as of last night. We've locked down the site for now, but we'll be opning for sign-ups fairly soon, with any luck the weekend of the 15th. Gerbils are working as fast as they can to get us there.</p>
 	<p>We'll be moving upstairs to www.projectmoonlite.com once we reach a solid alpha stage, but a little more obscurity from the Google is preferable right now until we put our face on. Once we open the site up to limited registration we'll be updating this space regularly as we add features.</p>
 	<p>-Sarge</p>
 	<p class="datetime">Monday, October 10th, 2011</p>
