--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,4 +1,3 @@
 <h1>Contact</h1>
-<p>We're keeping things a little under wraps for the time being. We'd tell you who we were but then we might regret it. Our day jobs are valuable to us.</p>
+<p>We're keeping things under wraps for the time being. We'd tell you who we were but then we might regret it. Our day jobs are valuable to us.</p>
 <p>Until now becomes later, you can reach us at info@projectmoonlite.com.</p>
-<p>If you are who we hope you are, you know who we are already. So theres that.</p>
