Made landing a little more encouraging.

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,2 +1,2 @@
 <h1>Project Moonlite</h1>
-<p>Welcome to Project Moonlite. We're still in private alpha but we'll be sending invites soon.</p>
+<p>Welcome to Project Moonlite. We're still in private alpha but we'll be opening up to a limited number of signups on October 15th. Visit our <%= link_to "About Us", about_path %> page to learn more.</p>
