Added new post, reworked page structure.

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,2 +1,18 @@
-<h1>Project Moonlite</h1>
-<p>Welcome to Project Moonlite. We're still in private alpha but we'll be opening up to a limited number of signups on October 15th. Visit our <%= link_to "About Us", about_path %> page to learn more.</p>
+<section class="landing-intro">
+	<h1>Project Moonlite</h1>
+	<p>
+		Welcome to Project Moonlite. We're still in private alpha but we'll be opening up to a limited number of signups on October 15th. Visit our 
+		<%= link_to "About Us", about_path %> 
+		page to learn more.
+	</p>
+	<p>
+		Check out our <%= link_to "News", news_path %> section to keep up to date with Project Moonlite development. Here's a snippet from the most recent post:
+	</p>
+</section>
+<section class="news-sample">
+	<h3>BEING a lean startup</h3>
+	<p>
+		I recently started reading <a href="http://books.google.com/ebooks?id=tvfyz-4JILwC">Lean Startup</a> and it made me worried. I was worried we were headed down the wrong path and making too many assumptions. So I decided to identify all the assumptions we've made and come up with a plan to test each, quickly. Here they are (though there's probably many more):<br/>
+		<%= link_to "Read more", news_path %>
+	</p>
+</section>
