--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -134,40 +134,6 @@ u.users {
 	list-style: none;
 }
 
-/*Microposts*/
-h1.micropost {
-	margin-bottom: 0.3em;
-} table.microposts {
-	margin-top: 1em;
-} table.microposts tr {
-	height: 70px;
-} table.microposts tr td.gravatar {
-	border-top: 1px solid #ccc;
-	vertical-align: top;
-	width: 90px;
-} table.microposts tr td.micropost {
-	border-top: 1px solid #ccc;
-	vertical-align: top;
-	padding-bottom: 10px;
-} table.microposts tr td.micropost span.timestamp {
-	display: block;
-	font-size: 85%;
-	color: #666;
-} div.user_info  img {
-	padding-right: 0.1em;
-} div.user_info a {
-	text-decoration: none;
-} div.user_info span.user_name {
-	position: absolute;
-} div.user_info span.microposts {
-	font-size: 80%;
-} form.new_micropost {
-	margin-bottom: 2em;
-} form.new_micropost textarea {
-	height: 4em;
-	margin-bottom: 0;
-}
-
 /* Paths */
 .path h2 {
 	font-size: 18px;
@@ -184,4 +150,13 @@ article {
 } article p.datetime {
 	font-size: 14px;
 	font-style: italic;
+} .landing-intro {
+	padding-bottom: 0px;
+	font-size: 17px;
+} .news-sample {
+	padding: 0px 40px 0px 40px;
+	font-size: 15px;
+} .news-sample h3 {
+	font-size: 16px;
+	font-weight: bold;
 }
