Inevitable revisions to the post.

--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -4,12 +4,12 @@
 <article>
 	<h2>BEING a Lean Startup</h2>
 
-	<p><strong>Revelation time</strong> - I recently started reading <a href="http://books.google.com/ebooks?id=tvfyz-4JILwC">Lean Startup</a> and it made me worried. I was worried we might headed down the wrong path and making too many assumptions. So I decided to identify all the assumptions we've made and come up with a plan to test each, quickly. Here they are (though there's probably many more):</p>
+	<p><strong>Revelation time</strong> - I recently started reading <a href="http://books.google.com/ebooks?id=tvfyz-4JILwC">Lean Startup</a> and it made me worried. I was worried we be might headed down the wrong path and making too many assumptions. So I decided to identify all the assumptions we've made and come up with a plan to test each, quickly. Here they are (though there's probably many more):</p>
 
 	<ol>
 		<li>People want to follow paths that guide them to becoming better at one thing.</li>
 		<li>People want to create paths for others to follow.</li>
-		<li>People want to spend a significant amount of time to create paths for others.</li>
+		<li>People want to spend a significant amount of time creating paths for others.</li>
 		<li>People don't want to create paths to follow themselves.</li>
 		<li>People want to have a mechanism that measures their progress along a path.</li>
 		<li>People don't want to self-measure their progress along a path.</li>
@@ -18,17 +18,17 @@
 		<li>People only want to broadcast their progress once it is sufficient to be impressive.</li>
 	</ol>
 	
-	<p><strong>Thats a lot to test, which may cost a great deal of time, money and moral</strong>. We need to test least the most worrisome concepts soon. Three and seven are the worst. Bluntly articulating them made me realize that both are risky, at least initially. Its a lot to ask users, and both feel like work. Even if we build a corporate product, we don't want it to feel like work. Many corporate products have been massive successes despite "feeling like work", but we're only just escaping that world. We don't want to create it anew with our own flavor.</p>
+	<p><strong>Thats a lot to test, which may cost a great deal of time, money and moral.</strong> We need to at least test the most worrisome concepts soon. Three and seven are the worst. Bluntly articulating them made me realize that both are risky, at least initially. Its a lot to ask users, and both feel like work. Even if we build a corporate product, we don't want it to feel like work. Many corporate products have been massive successes despite "feeling like work", but we're only just escaping that world. We don't want to create it anew with our own flavor.</p>
 
-	<p>I broke the model down to the basics - users, paths for users to take, and ways to measure/validate progress along those paths. Users and paths are done, but progress is measured by testing your knowledge with questions. In hindsight I think we did that because we just graduated college and the exam mindset came naturally. We need a more flexible model of measuring a user's progress, with less overhead for path takers and makers.</p>
+	<p>I broke the model down to the basics - users, paths for users to take, and ways to measure progress along those paths. Users and paths are done, but progress is measured by testing your knowledge with questions. In hindsight I think we did that because we just graduated college and the exam mindset came naturally. We need a more flexible model of measuring a user's progress, with less overhead for path takers and makers.</p>
 	
 	<p><strong>How about self-reported achievements?</strong></p>
 
-	<p>Can you self-measure a self-reported achievement? I don't think so. But what if other users, like your boss or peers or the whole Moonlite community, evaluated whether you have truly progressed and by how much? There could be exams, articles/books read, things done, conferences attended and people met, etc. A community could form around each path, and members of that community would organically decide what best constitutes "validated learning" within that path. To sum, heres the before and after:</p>
+	<p>Can you self-measure a self-reported achievement? I don't think so. But what if other users, like your boss or peers or the whole Moonlite community, evaluated whether you have truly progressed and by how much? You could list as an achievement an exam you took, articles/books read, things done, conferences attended and people met, etc. A community could form around each path, and members of that community would organically decide what best constitutes "validated learning" within that path. To sum, heres the before and after:</p>
 
-	<p><strong>Before:</strong> I discover the "Lean Startup Entrepreneur", which seems interesting so I enroll. I read Eric Reis' book, which is suggested in the path and return to Moonlite to complete the 'exam'. I answer some questions easily, some I refer back to the book, but some frustrate me as they require an interpretation I disagree with. I genuinely feel a sense of achievement, but the effort was considerable and pedantic, so I may not be sure I want to replicate the experience.</p>
+	<p><strong>Before:</strong> I discover the "Lean Startup Entrepreneur" path on Project Moonlite, which seems interesting so I enroll. I read Eric Reis' book, which is suggested in the path and return to Moonlite to complete the 'exam'. I answer some questions easily, some I refer back to the book, but some frustrate me as they require an interpretation I disagree with. I genuinely feel a sense of achievement, but the effort was considerable and pedantic, so I may not be sure I want to replicate the experience.</p>
 
-	<p><strong>Now</strong>: As before, I enroll in the path and read some of the book. Theres an optional exam to take but instead I write about how I took what I've learned so far and applied them to my current moonlight job as a startup entrepenuer by shifting strategy to get a testable product to sooner has more flexibility to test the hardest assumptions. I'm not a master of Lean yet, I write, because I haven't built quantitative methods to test my new assumptions. But I've started, made real progress, and in true Project Moonlite fashion, submitted to my community for feedback and encouragement.</p>
+	<p><strong>Now</strong>: As before, I enroll in the path and read some of the book. Theres an optional exam to take but instead I write about how I took what I've learned so far and applied them to my current moonlight job as a startup entrepreneur by shifting strategy to get a testable product to sooner has more flexibility to test the hardest assumptions. I'm not a master of Lean yet, I write, because I haven't built quantitative methods to test my new assumptions. But I've started, made real progress, and in true Project Moonlite fashion, submitted to my community for feedback and encouragement.</p>
 
 	<p>Okay, now to write some code.</p>
 	
