redid paths page and started achievements

--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -2,6 +2,21 @@
 	<h1>News</h1>
 </header>
 <article>
+	<h2>Sneak Preview</h2>
+	
+	<p>After a multiple revisions, I think we've settled on the basic functionality for the path and how to represent it on the path homescreen. In the snap shot below, you can see a user that has enrolled in the "Salesforce Chatter" path, and has achieved a 2nd level rank by solving problems in pre-built quizzes. But you can also see that we've added the "Post Achievement" feature, which will act as the free-spirited counterpoint to the quizzes.</p>
+	
+	<p>I'm hoping that the community will learn to come up with some great ideas on how to use achievements, as well as standards for awarding points. It also makes the quiz portion optional for the path makers, since users could simply rise through the path by completing achievements.</p>
+	
+	<p>Right now the "Post Achievement" button links nowhere, but hoping to start testing that this weekend. Really excited with the direction we're headed. Next up, fleshing out Achievements and adding linkable resources (like links to Google Books, Khan Academy or Udemy lectures, articles, etc.) to each path.</p>
+	
+	<img src="images/preview.png" height="500" width="500"/>
+	
+	<p style="margin-top: 20px;">-Sarge</p>
+	
+	<p class="datetime">Thursday, October 13th, 2011</p>
+</article>
+<article>
 	<h2>BEING a Lean Startup</h2>
 
 	<p><strong>Revelation time</strong> - I recently started reading <a href="http://books.google.com/ebooks?id=tvfyz-4JILwC">Lean Startup</a> and it made me worried. I was worried we be might headed down the wrong path and making too many assumptions. So I decided to identify all the assumptions we've made and come up with a plan to test each, quickly. Here they are (though there's probably many more):</p>
