stupid unix case sensitivity - image.png -> image.PNG

--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -10,7 +10,7 @@
 	
 	<p>Right now the "Post Achievement" button links nowhere, but hoping to start testing that this weekend. Really excited with the direction we're headed. Next up, fleshing out Achievements and adding linkable resources (like links to Google Books, Khan Academy or Udemy lectures, articles, etc.) to each path.</p>
 	
-	<img src="images/preview.png" height="500" width="500"/>
+	<img src="images/preview.PNG" height="500" width="500"/>
 	
 	<p style="margin-top: 20px;">-Sarge</p>
 	
