--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -3,6 +3,15 @@
 		<%= link_to task.question, task %>
 	</span></br>
 	<span class="task-answer">
-		<%= task.answer %>
+		<%= task.answer1 %>
+	</span>
+	<span class="task-answer">
+		<%= task.answer2 %>
+	</span>
+	<span class="task-answer">
+		<%= task.answer3 %>
+	</span>
+	<span class="task-answer">
+		<%= task.answer4 %>
 	</span>
 </li>
