--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,9 @@
 <section class="task">
-	<p><%= @task.rank %></p>
+	<p><%= @task.points %></p>
 	<p><%= @task.question %></p>
-	<p><%= @task.answer %></p>
+	<p><%= @task.answer1 %></p>
+	<p><%= @task.answer2 %></p>
+	<p><%= @task.answer3 %></p>
+	<p><%= @task.answer4 %></p>
 	<%= link_to "Edit", edit_task_path(@task)%>
 </section>
