--- a/app/views/paths/new.html.erb
+++ b/app/views/paths/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Path</h1>
 <%= form_for(@path) do |f| %>
-	<%= render 'shared/error_messages', :object => f.object %>
+	<%= render "shared/error_messages", :object => f.object %>
 	<div class="field">
 		<%= f.label :name %><br/>
 		<%= f.text_field :name %>
