--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,7 +1,44 @@
-<h1><%= @company.name %></h1>
-<ol>
-	<% @company_users.each do |cu| %>
-	<li><%= cu.user.name %></li>
-	<% end %>
-</ol>
-<%= link_to "Add user", {:controller => "company_users", :action => "new", :company => @company } %>
+<section id="company-profile">
+	<style>
+		section {
+			margin-top: 0px;
+		} h1 {
+			margin-bottom: 0px;
+			font-size: 32px;
+		} h2 {
+			font-size: 28px;
+		} h3 {
+			margin-top: 15px;
+			font-size: 20px;
+		} p {
+			font-size: 16px;
+			margin-bottom: 0px;
+		} ol {
+			margin-bottom: 10px;
+		}
+	</style>
+	<h1><%= @company.name %></h1>
+	<section id="users">
+		<h2>Users</h2>
+		<% if @company_users.empty? %>
+			<p>You do not have any users for your organization yet.</p>
+		<% else %>
+		<ol>
+			<% @company_users.each do |cu| %>
+			<li><%= cu.user.name %></li>
+			<% end %>
+		</ol>
+		<% end %>
+		<p><%= link_to "Add user", {:controller => "company_users", :action => "new", :company => @company } %></p>
+		<h3>Awaiting reply from:</h3>
+		<% if @unregistered_company_users.empty? %>
+			<p>There are no outstanding user invitations.</p>
+		<% else %>
+		<ol>
+			<% @unregistered_company_users.each do |cu| %>
+			<li><%= cu.email %></li>
+			<% end %>
+		</ol>
+		<% end %>
+	</section>
+</section>
