upload file fixes

--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -25,7 +25,7 @@
 		<% else %>
 		<ol>
 			<% @company_users.each do |cu| %>
-			<li><%= cu.user.name %></li>
+			<li><%= link_to cu.user.name, cu.user %></li>
 			<% end %>
 		</ol>
 		<% end %>
