Added reports controller and prototype dashboard view.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,6 +28,6 @@ $(document).ready(function() {
 </table>
 <% else %>
 	<h1>Project Moonlite</h1>
-	<p>This is the home page for the Project Moonlite.</p>
+	<p>Know who knows what. And who doesn't.</p>
 	<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
 <% end %>
