--- a/app/views/rewards/show.html.erb
+++ b/app/views/rewards/show.html.erb
@@ -4,4 +4,5 @@
 	<p><%= @reward.points %></p>
 	<p><%= @reward.image_url %></p>
 	<%= link_to "Edit", edit_reward_path(@reward)%>
+	<%= link_to "Purchase", review_reward_path(@reward)%>
 </section>
