--- a/app/views/layouts/_stylesheets.html.erb
+++ b/app/views/layouts/_stylesheets.html.erb
@@ -7,3 +7,4 @@
 <%= stylesheet_link_tag 'blueprint/ie', :media => 'print' %>
 <![endif]-->
 <%= stylesheet_link_tag 'custom', :media => 'screen' %>
+<link rel="stylesheet" href="http://twitter.github.com/bootstrap/1.4.0/bootstrap.min.css">
